<?xml version="1.0"?>
<package format="2">

  <name>transform</name>
  <version>1.0.0</version>
  <description>A library for calculating geometric transformations.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs_ext</depend>

</package>
